@@ -36,6 +36,7 @@ Release 0.21.0 - Unreleased
    HBASE-1819  Update to 0.20.1 hadoop and zk 3.2.1
    HBASE-1820  Update jruby from 1.2 to 1.3.1
    HBASE-1722  Add support for exporting HBase metrics via JMX
+   HBASE-1825  code cleanup, hmaster split debug logs
 
   OPTIMIZATIONS
    HBASE-1765  Delay Result deserialization until asked for and permit
